--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
               target="_blank"
               class="social__link"
             >
-              <i class="fa-brands fa-github green" ></i>
+              <i class="fa-brands fa-github green"></i>
             </a>
             <a
               href="/assets/David Bragg Resume.pdf"
               target="_blank"
               class="social__link"
             >
-              <i class="fas fa-file-pdf green" ></i>
+              <i class="fas fa-file-pdf green"></i>
             </a>
           </div>
         </div>
@@ -88,9 +88,90 @@
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
+      <div class="modal">
+        <div class="modal__half modal__about">
+          <h3 class="modal__title mmodal__title--about">
+            Here's a bit about me.
+          </h3>
+          <h4 class="modal__sub-title modal__sub-title-about">
+            Frontend Software Engineer
+          </h4>
+          <p class="modal__para">
+            I'm a 19 year-old Australian
+            <span class="green">software engineer</span> with a strong passion
+            for devlopping websiters with great
+            <span class="green">user experiences.</span>
+            <br />
+            I currently work on extremely difficult engineering projects and
+            learn from a group consiting of some of the most
+            <span class="green"> talented</span> and
+            <span class="green">experienced</span> software engineers every day.
+          </p>
+          <div class="modal__languages">
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+              <span class="language__name">HTML</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                alt=""
+              />
+              <span class="language__name">CSS</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                alt=""
+              />
+              <span class="language__name">JavaScript</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
+                alt=""
+              />
+              <span class="language__name">TypeScript</span>
+            </figure>
+          </div>
+        </div>
+        <div class="modal__half modal__contact">
+          <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
+          <h3 class="modal__sub-title modal__sub-title--contact">
+            I'd love to hear from you!
+          </h3>
+          <form id="contact__form" action="">
+            <div class="form__item">
+              <label class="form__item--label">Name</label>
+              <input type="text" required name="user_name" class="input" />
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">E-mail</label>
+              <input type="text" required name="user_email" class="input" />
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Message</label>
+              <textarea
+                type="text"
+                required
+                name="message"
+                class="input"
+              ></textarea>
+            </div>
+            <button id="contact__submit" class="form__submit">Send it my way</button>
+          </form>
+        </div>
+      </div>
     </section>
 
-    <section id="Projects">
+    <section id="projects">
       <div class="container">
         <div class="row">
           <h1 class="section__title">
@@ -140,25 +221,25 @@
           <div class="footer__social--list">
             <a
               href="#"
-              class="footer__social--link link__hover-effect link__hover-effect--black"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Github
             </a>
             <a
               href="#"
-              class="footer__social--link link__hover-effect link__hover-effect--black"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Linkedin
             </a>
             <a
               href="#"
-              class="footer__social--link link__hover-effect link__hover-effect--black"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Email
             </a>
             <a
               href="#"
-              class="footer__social--link link__hover-effect link__hover-effect--black"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Resume
             </a>
