--- a/index.html
+++ b/index.html
@@ -9,31 +9,40 @@
       src="https://kit.fontawesome.com/209138caec.js"
       crossorigin="anonymous"
     ></script>
-    <script src="app.js" defer></script>
+    <script src="index.js"></script>
     <title>Umar Khan</title>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("GgSM4ixbBDbqPcaHb");
+      })();
+    </script>
   </head>
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img id="personal-logo" src="./assets/1.svg" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link click">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >About</a
             >
           </li>
-          <li class="nav__link click">
+          <li class="nav__link">
             <a
-              href="#"
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li class="nav__link click">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -44,7 +53,7 @@
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              ><i class="fas fa-adjust"></i
+              ><i class="fas fa-adjust" onclick="toggleContrast()"></i
             ></a>
           </li>
         </ul>
@@ -53,13 +62,14 @@
       <header class="header">
         <div class="header__content">
           <h1 class="title">Hey</h1>
-          <h1 class="title green">I'm Umar</h1>
+          <h1 class="title green">I'm Umar.</h1>
           <p class="header__para">
             I'm a <span class="green">Frontend Software Engineer</span> with a
             strong passion for building web applications with great user
             experiences.
             <br />
-            Here's a bit more <span class="green">about me.</span>
+            Here's a bit more
+            <span class="green click" onclick="toggleModal()">about me.</span>
           </p>
           <div class="social__list">
             <a href="" target="_blank" class="social__link green">
@@ -82,9 +92,11 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click">
-        <i class="fas fa-envelope"></i>
-      </button>
+      <a href="#">
+        <button class="mail__btn click" onclick="toggleModal()">
+          <i class="fas fa-envelope"></i>
+        </button>
+      </a>
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -143,33 +155,48 @@
           </div>
         </div>
         <div class="modal__half modal__contact">
+          <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
+
           <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
           <h3 class="modal__sub-title modal__sub-title--contact">
             I'd love to hear from you!
           </h3>
-          <form id="contact__form" action="">
+          <form id="contact__form" onsubmit="contact(event)">
             <div class="form__item">
               <label class="form__item--label">Name</label>
-              <input type="text" required name="user_name" class="input" />
+              <input type="text" name="user_name" class="input" />
             </div>
             <div class="form__item">
               <label class="form__item--label">E-mail</label>
-              <input type="text" required name="user_email" class="input" />
+              <input type="text" name="user_email" class="input" />
             </div>
             <div class="form__item">
               <label class="form__item--label">Message</label>
-              <textarea
-                type="text"
-                required
-                name="message"
-                class="input"
-              ></textarea>
+              <textarea type="text" name="message" class="input"></textarea>
             </div>
-            <button id="contact__submit" class="form__submit">Send it my way</button>
+            <button id="contact__submit" class="form__submit">
+              Send it my way
+            </button>
           </form>
+          <div class="modal__overlay modal__overlay--loading">
+            <i class="fas fa-spinner"></i>
+          </div>
+          <div class="modal__overlay modal__overlay--success">
+            Thanks for the message! Looking forward to speaking to you soon.
+          </div>
         </div>
       </div>
     </section>
+
+    <img src="./assets/semi circle.svg" alt="" class="shape shape--0" />
+    <img src="./assets/circle.svg" alt="" class="shape shape--1" />
+    <img src="./assets/squiggly.svg" alt="" class="shape shape--2" />
+    <img src="./assets/circle.svg" alt="" class="shape shape--3" />
+    <img src="./assets/triangle.svg" alt="" class="shape shape--4" />
+    <img src="./assets/circle.svg" alt="" class="shape shape--5" />
+    <img src="./assets/squiggly.svg" alt="" class="shape shape--6" />
+    <img src="./assets/circle.svg" alt="" class="shape shape--7" />
+    <img src="./assets/semi circle.svg" alt="" class="shape shape--8" />
 
     <section id="projects">
       <div class="container">
@@ -220,7 +247,7 @@
           </figure>
           <div class="footer__social--list">
             <a
-              href="#"
+              href="https://github.com/Xylirator"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Github
@@ -234,11 +261,12 @@
             <a
               href="#"
               class="footer__social--link link__hover-effect link__hover-effect--white"
+              onclick="toggleModal()"
             >
-              Email
+              Contact
             </a>
             <a
-              href="#"
+              href="./assets/David Bragg Resume.pdf" target="_blank" 
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Resume
