fixed typos and added popper

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <p class="modal__para">
             I'm a 19 year-old Australian
             <span class="green">software engineer</span> with a strong passion
-            for devlopping websiters with great
+            for developing websites with great
             <span class="green">user experiences.</span>
             <br />
             I currently work on extremely difficult engineering projects and
@@ -242,9 +242,15 @@
     <footer>
       <div class="container">
         <div class="footer__row">
-          <figure class="footer__logo">
-            <img class="footer__logo--img" src="./assets/1.svg" alt="" />
-          </figure>
+          <a href="#" class="footer__anchor">
+            <figure class="footer__logo">
+              <img class="footer__logo--img" src="./assets/1.svg" alt="" />
+            </figure>
+            <span class="footer__logo--popper">
+              Top
+              <i class="fas fa-arrow-up"></i>
+            </span>
+          </a>
           <div class="footer__social--list">
             <a
               href="https://github.com/Xylirator"
