--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </a>
           </p>
           <div class="social__list">
-            <a href="" target="_blank" class="social__link green">
+            <a href="https://www.linkedin.com/in/umar-khan-9613771b4/" target="_blank" class="social__link green">
               <i class="fa-brands fa-linkedin-in"></i>
             </a>
             <a
